[tool.poetry]
name = "pyinverter"
version = "0.1.0"
description = "Python interface to most common inverters"
authors = ["Ross Hogan <ross@hogan.engineer>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest-coverage = "^0.0"
pytest = "^6.2.1"
black = "^20.8b1"
pytest-html = "^3.1.1"
flake8 = "^3.8.4"

[tool.black]
line-length = 110
target-version = ['py36', 'py37', 'py38']
exclude = ''' 
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
